--- a/MedicAPP/MedicAPP.csproj
+++ b/MedicAPP/MedicAPP.csproj
@@ -63,6 +63,7 @@
       <DependentUpon>AgendarCitacs.cs</DependentUpon>
     </Compile>
     <Compile Include="Controller\CategoriaMedicamentoController.cs" />
+    <Compile Include="Controller\LaboratorioMedicamentoController.cs" />
     <Compile Include="Controller\loginController.cs" />
     <Compile Include="Controller\PresentacionMedicamentoController.cs" />
     <Compile Include="frmCategoria.cs">
@@ -189,6 +190,7 @@
       <DependentUpon>MedicapDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="Model\ModelCategoriaMedicamento.cs" />
+    <Compile Include="Model\ModelLaboratorioMedicamento.cs" />
     <Compile Include="Model\ModelLogin.cs" />
     <Compile Include="Model\ModelPresentacionMedicamento.cs" />
     <Compile Include="Program.cs" />
