Modelo y controlador de medicamento para un crud terminados

--- a/MedicAPP/MedicAPP.csproj
+++ b/MedicAPP/MedicAPP.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Controller\CategoriaMedicamentoController.cs" />
     <Compile Include="Controller\LaboratorioMedicamentoController.cs" />
     <Compile Include="Controller\loginController.cs" />
+    <Compile Include="Controller\MedicamentoController.cs" />
     <Compile Include="Controller\PresentacionMedicamentoController.cs" />
     <Compile Include="frmCategoria.cs">
       <SubType>Form</SubType>
@@ -192,6 +193,7 @@
     <Compile Include="Model\ModelCategoriaMedicamento.cs" />
     <Compile Include="Model\ModelLaboratorioMedicamento.cs" />
     <Compile Include="Model\ModelLogin.cs" />
+    <Compile Include="Model\ModelMedicamento.cs" />
     <Compile Include="Model\ModelPresentacionMedicamento.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
