Modelo de cita ya se crearon las funciones de ver, validar, insertar y buscar

--- a/MedicAPP/MedicAPP.csproj
+++ b/MedicAPP/MedicAPP.csproj
@@ -63,6 +63,7 @@
       <DependentUpon>AgendarCitacs.cs</DependentUpon>
     </Compile>
     <Compile Include="Controller\CategoriaMedicamentoController.cs" />
+    <Compile Include="Controller\CitaController.cs" />
     <Compile Include="Controller\ExamenCategoriaController.cs" />
     <Compile Include="Controller\ExamenController.cs" />
     <Compile Include="Controller\LaboratorioMedicamentoController.cs" />
@@ -194,6 +195,7 @@
       <DependentUpon>MedicapDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="Model\ModelCategoriaMedicamento.cs" />
+    <Compile Include="Model\ModelCita.cs" />
     <Compile Include="Model\ModelExamen.cs" />
     <Compile Include="Model\ModelExamenCategoria.cs" />
     <Compile Include="Model\ModelLaboratorioMedicamento.cs" />
