--- a/MedicAPP/MedicAPP.csproj
+++ b/MedicAPP/MedicAPP.csproj
@@ -64,6 +64,7 @@
     </Compile>
     <Compile Include="Controller\CategoriaMedicamentoController.cs" />
     <Compile Include="Controller\CitaController.cs" />
+    <Compile Include="Controller\ConsultasController.cs" />
     <Compile Include="Controller\ExamenCategoriaController.cs" />
     <Compile Include="Controller\ExamenController.cs" />
     <Compile Include="Controller\LaboratorioMedicamentoController.cs" />
@@ -196,6 +197,7 @@
     </Compile>
     <Compile Include="Model\ModelCategoriaMedicamento.cs" />
     <Compile Include="Model\ModelCita.cs" />
+    <Compile Include="Model\ModelConsultas.cs" />
     <Compile Include="Model\ModelExamen.cs" />
     <Compile Include="Model\ModelExamenCategoria.cs" />
     <Compile Include="Model\ModelLaboratorioMedicamento.cs" />
