--- a/MedicAPP/Properties/Settings.settings
+++ b/MedicAPP/Properties/Settings.settings
@@ -5,10 +5,10 @@
     <Setting Name="cnx" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=DESKTOP-PKH9IDS;Initial Catalog=MedicApp;User ID=sa;Password=qwerty&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=DESKTOP-TQ0VSN7;Initial Catalog=MedicApp;User ID=sa;Password=sqlserver17&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=DESKTOP-PKH9IDS;Initial Catalog=MedicApp;User ID=sa;Password=qwerty</Value>
+      <Value Profile="(Default)">Data Source=DESKTOP-TQ0VSN7;Initial Catalog=MedicApp;User ID=sa;Password=sqlserver17</Value>
     </Setting>
   </Settings>
 </SettingsFile>
