Se creo el controlador de la sesion, se tiene que comenzar a llenar con los datos del medico para continuar con la implementacion de la consulta

--- a/MedicAPP/MedicAPP.csproj
+++ b/MedicAPP/MedicAPP.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Controller\MedicamentoController.cs" />
     <Compile Include="Controller\PacientesController.cs" />
     <Compile Include="Controller\PresentacionMedicamentoController.cs" />
+    <Compile Include="Controller\sesion.cs" />
     <Compile Include="frmCategoria.cs">
       <SubType>Form</SubType>
     </Compile>
